atlantis/secret_for_helm.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis
spec:
  ingressClassName: nginx
  rules:
  - host: "atlantis.familym.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atlantis
            port:
              number: 80
